--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "React web for AirMsg app",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack-dev-server --inline --content-base . --history-api-fallback"
   },
   "author": "Daria",
   "license": "ISC",
@@ -14,6 +15,7 @@
     "babel-preset-react": "^6.5.0",
     "react": "^15.0.1",
     "react-dom": "^15.0.1",
-    "webpack": "^1.13.0"
+    "webpack": "^1.13.0",
+    "webpack-dev-server": "^1.14.1"
   }
 }
