--- a/package.json
+++ b/package.json
@@ -7,10 +7,15 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server --inline --content-base . --history-api-fallback"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/piggydoughnut/airWeb"
+  },
   "author": "Daria",
   "license": "ISC",
   "dependencies": {
     "react": "^15.0.1",
+    "react-bootstrap": "^0.29.0",
     "react-dom": "^15.0.1",
     "react-router": "^2.3.0"
   },
