--- a/package.json
+++ b/package.json
@@ -20,12 +20,20 @@
     "react-dom": "^15.0.1",
     "react-masonry-component": "^4.0.2",
     "react-masonry-layout": "^0.2.2",
-    "react-router": "^2.3.0"
+    "react-redux": "^4.4.5",
+    "react-router": "^2.3.0",
+    "react-router-redux": "^4.0.2",
+    "redux": "^3.5.1",
+    "redux-logger": "^2.6.1",
+    "redux-saga": "^0.9.5"
   },
   "devDependencies": {
+    "babel-core": "^6.7.7",
     "babel-loader": "^6.2.4",
+    "babel-polyfill": "^6.7.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0",
     "react": "^15.0.1",
     "react-dom": "^15.0.1",
     "react-router": "^2.3.0",
